welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:11: error: Unmatched closing brace '}' ignored here
 }
 ^